fix: made hero look better on smaller screens

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -49,10 +49,9 @@ body
   background: $Teal60
   border-radius: 0 0 2.5rem 0
   padding: 2rem 2.5rem
+  width: 2.5rem
   position: fixed
   top: 0
-  & > img
-    height: 4rem
 
 .page-not-found
   margin: auto !important
@@ -203,11 +202,13 @@ body
   body
     font-size: 1.1rem
   .logo
-    padding: 1.4rem 2rem
-    height: 3rem
-    width: 2rem
+    padding: 3vh 3.5vh
+    width: 4vh
+  .center-text
+    font-size: 4.5vh
   .center-text .title
-    max-width: 3rem
+    word-spacing: 100vw
+    font-size: 9vh
   .projects
     margin-left: 0
     border-radius: 0
